// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader placeholders should render <AppPlaceholder /> correctly 1`] = `
<Connect(Main)
  style={
    Object {
      "marginLeft": 0,
      "padding": 0,
    }
  }
>
  <Holder
    height={16}
    primaryColor="#FFFFFF"
    secondaryColor="#FFFFFF"
    speed={2}
    store={[Function]}
    width={300}
  >
    <rect
      height="10"
      rx="0"
      ry="0"
      width="420"
      x="0"
      y="0"
    />
  </Holder>
  <CardLoader
    items={13}
  />
</Connect(Main)>
`;

exports[`Loader placeholders should render <CardLoader /> correctly 1`] = `
<Grid
  className=""
  gutter="md"
  lg={null}
  md={null}
  sm={null}
  span={null}
  xl={null}
>
  <GridItem
    className=""
    lg={null}
    lgOffset={null}
    lgRowSpan={null}
    md={null}
    mdOffset={null}
    mdRowSpan={null}
    offset={null}
    rowSpan={null}
    sm={12}
    smOffset={null}
    smRowSpan={null}
    span={null}
    style={
      Object {
        "padding": 24,
      }
    }
    xl={null}
    xlOffset={null}
    xlRowSpan={null}
  >
    <Gallery
      className=""
      gutter="md"
    >
      <GalleryItem
        key="0"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="1"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="2"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="3"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="4"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="5"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="6"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="7"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="8"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="9"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="10"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="11"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="12"
      >
        <Card
          className=""
          component="article"
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody
            className=""
            component="div"
          >
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
    </Gallery>
  </GridItem>
</Grid>
`;

exports[`Loader placeholders should render <PortfolioLoader /> correctly 1`] = `
<Grid
  className=""
  gutter="md"
  lg={null}
  md={null}
  sm={null}
  span={null}
  xl={null}
>
  <GridItem
    className=""
    lg={null}
    lgOffset={null}
    lgRowSpan={null}
    md={null}
    mdOffset={null}
    mdRowSpan={null}
    offset={null}
    rowSpan={null}
    sm={12}
    smOffset={null}
    smRowSpan={null}
    span={null}
    xl={null}
    xlOffset={null}
    xlRowSpan={null}
  >
    <Holder
      height={16}
      primaryColor="#FFFFFF"
      secondaryColor="#FFFFFF"
      speed={2}
      width={300}
    >
      <rect
        height="16"
        rx="0"
        ry="0"
        width="420"
        x="0"
        y="0"
      />
    </Holder>
  </GridItem>
  <GridItem
    className=""
    lg={null}
    lgOffset={null}
    lgRowSpan={null}
    md={null}
    mdOffset={null}
    mdRowSpan={null}
    offset={null}
    rowSpan={null}
    sm={12}
    smOffset={null}
    smRowSpan={null}
    span={null}
    style={
      Object {
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
    xl={null}
    xlOffset={null}
    xlRowSpan={null}
  >
    <CardLoader
      items={5}
    />
  </GridItem>
</Grid>
`;
